--- a/sample.html
+++ b/sample.html
@@ -10,6 +10,7 @@
       <h1>サービス紹介</h1>
       <h2>webcamp</h2>
       <p>マンツーマンサポートによる学習で、確実にWebスキルを習得できるプログラミングスクールです。</p>
+      <a href="https://web-camp.io/">webサイト</a>
       <h2>webcamo pro</h2>
       <p>未経験から転職を保証する日本で唯一のプログラミングスクールです。</p>
       <h2>webcamp woman</h2>
